<Input/> - Fix suffix spacing

--- a/src/Input/Input.scss
+++ b/src/Input/Input.scss
@@ -88,6 +88,7 @@ $material-gap: 8px;
   //https://github.com/wix/wix-style-react/issues/1693
   //https://github.com/wix/wix-style-react/issues/1691
   display: block;
+  margin-right: 6px;
 }
 
 .roundInput {
@@ -343,6 +344,11 @@ $material-gap: 8px;
   .suffix {
     &:first-child .unit-separator { margin-right: $double-gap; margin-left: $gap; }
     &:last-child .unit { padding-left: $double-gap; padding-right: $gap; }
+  }
+
+  .prefixSuffixWrapper {
+    margin-right: 0;
+    margin-left: 6px;
   }
 }
 
